Refacter: refacter routes removebookfromcart
